# simple-chatroom

./: .env  .gitignore  Dockerfile  README.md  database.py  docker-compose.yml  main.py  models.py  mongo_test.py  pyproject.toml  routes.py  test_routes.py
chat_room/: __init__.py  auth.py  auth_routes.py  chat_routes.py  conftest.py  database.py  main.py  models.py  mongo_test.py  routes.py  test_routes.py
chat_room/models/: user.py
frontend/: chat.js  index.html  styles.css
scripts/: show_routes.py
